--- a/public/index.html
+++ b/public/index.html
@@ -314,7 +314,7 @@
     </h2>
     
     <div class="description">
-      Probando la mejor IA para generar imágenes
+      Probando la mejor IA para generar imágenes!
     </div>
   </div>
 
